--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,6 +411,11 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+img.img-fluid {
+  overflow: hidden;
+  border-radius: 15%;
+}
+
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
