--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,7 +419,7 @@ img.img-fluid {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #728394;
+  color: #45505b;
 }
 
 .about .content ul {
